feat: user feedback

--- a/src/main/resources/templates/client/account/info-account.html
+++ b/src/main/resources/templates/client/account/info-account.html
@@ -133,7 +133,7 @@
                                                     chờ thanh toán</p>
                                                 <p th:case="'CONFIRM'" class="text-info">Đã xác nhận</p>
                                                 <p th:case="'CANCEL'" class="text-danger">Đã hủy</p>
-                                                <p th:case="'BOOKED'" class="text-success">Đã đặt thành công</p>
+                                                <p th:case="'COMPLETED'" class="text-success">Đã đặt thành công</p>
                                                 <p th:case="'IN_PROGRESS'" class="text-primary">Đang thuê</p>
                                             </div>
                                         </td>
