--- a/src/main/resources/templates/client/layout.html
+++ b/src/main/resources/templates/client/layout.html
@@ -80,6 +80,8 @@
 
 <div th:replace="client/fragments/signin-modal:: signin-modal"></div>
 
+<div th:replace="client/fragments/feedback-modal:: feedback-modal"></div>
+
 <div th:replace="client/fragments/forgot-modal:: forgot-modal"></div>
 
 <div th:replace="client/fragments/change-modal:: change-modal"></div>
