--- a/src/main/resources/templates/client/layout.html
+++ b/src/main/resources/templates/client/layout.html
@@ -248,8 +248,43 @@
     document.getElementById("end_time").addEventListener("change", calculateAndUpdate);
 
     window.onload = calculateAndUpdate;
+
     // window.onload = setDefaultValues;
 
+    function submitForm() {
+        Swal.fire({
+            title: 'Xác nhận gửi dữ liệu?',
+            text: "Bạn có chắc chắn muốn thanh toán?",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Xác nhận!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                const formData = new FormData(document.getElementById('form-check-out'));
+                axios.post(baseUrl + '/car/check-out/submit', formData)
+                    .then(function (response) {
+                        Swal.fire({
+                            title: 'Thông báo',
+                            text: 'Dữ liệu đã được gửi thành công',
+                            icon: 'success',
+                            showConfirmButton: false,
+                            timer: 700
+                        }).then(() => {
+                            window.location.href = baseUrl + '/car/booking-list'; // Replace with your redirect URL
+                        });
+                    }).catch(function (error) {
+                    Swal.fire({
+                        title: 'Lỗi',
+                        text: 'Đã có lỗi xảy ra, vui lòng thử lại sau!',
+                        icon: 'error',
+                        confirmButtonText: 'Đóng'
+                    });
+                });
+            }
+        });
+    }
 
     /*]]>*/
 </script>
