--- a/src/main/resources/templates/client/carOwner/details.html
+++ b/src/main/resources/templates/client/carOwner/details.html
@@ -102,7 +102,7 @@
                                            th:field="*{name}" required>
                                     <div class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                                 </div>
-
+                                <input type="hidden" th:field="${carDto.statusCar}">
                                 <div class="form-group">
                                     <label for="licensePlate">License Plate:</label>
                                     <input type="text" class="form-control" id="licensePlate" name="licensePlate"
