--- a/src/main/resources/templates/client/home/index.html
+++ b/src/main/resources/templates/client/home/index.html
@@ -218,7 +218,7 @@
                                         <!-- End .banner-subtitle -->
                                         <h3 class="banner-title text-white">
                                             <a href="#">Xe thể thao <br>Mùa hè <br> <span>Giảm
-														20%</span></a>
+														trước</span></a>
                                         </h3>
                                         <!-- End .banner-title -->
                                         <a th:href="@{/car/client}" class="banner-link">Cửa hàng
@@ -413,7 +413,7 @@
                                  th:each="item, i : ${listElectric}">
                                 <figure class="product-media">
 										<span>
-											<span class="product-label label-sale">Đặt cọc 20%</span>
+											<span class="product-label label-sale">Đặt cọc trước</span>
                                             <span
 												class="product-label"
 												th:text="${item.isAvailable() ? 'Available' : 'Stopped'}"
@@ -553,7 +553,7 @@
                             <div class="product text-center" th:each="item, i : ${listPetrol}">
                                 <figure class="product-media">
 										<span>
-											<span class="product-label label-sale">Đặt cọc 20%</span>
+											<span class="product-label label-sale">Đặt cọc trước</span>
                                             <span
 												class="product-label"
 												th:text="${item.isAvailable() ? 'Available' : 'Stopped'}"
@@ -694,7 +694,7 @@
                                  th:each="item, i : ${listHybrid}">
                                 <figure class="product-media">
 										<span>
-											<span class="product-label label-sale">Đặt cọc 20%</span>
+											<span class="product-label label-sale">Đặt cọc trước</span>
                                             <span
 												class="product-label"
 												th:text="${item.isAvailable() ? 'Available' : 'Stopped'}"
@@ -830,7 +830,7 @@
                             <div class="product text-center" th:each="item, i : ${listDiesel}">
                                 <figure class="product-media">
 										<span>
-											<span class="product-label label-sale">Đặt cọc 20%</span>
+											<span class="product-label label-sale">Đặt cọc trước</span>
                                             <span
 												class="product-label"
 												th:text="${item.isAvailable() ? 'Available' : 'Stopped'}"
@@ -999,7 +999,7 @@
 										</span>
 
                                     <div class="icon-box-content">
-                                        <h3 class="icon-box-title">Giảm 20% cho sản phẩm</h3>
+                                        <h3 class="icon-box-title">Giảm trước cho sản phẩm</h3>
                                         <!-- End .icon-box-title -->
                                         <p>Khi bạn đăng nhập</p>
                                     </div>
@@ -1051,7 +1051,7 @@
                                     <div
                                             class="banner-content banner-content-top banner-content-right text-right">
                                         <h3 class="banner-title text-white">
-                                            <a href="#">Thoải mái tối đa <span>Sofas -20%
+                                            <a href="#">Thoải mái tối đa <span>Sofas -trước
 														Giảm</span></a>
                                         </h3>
                                         <!-- End .banner-title -->
@@ -1078,7 +1078,7 @@
                                     <div class="banner-content banner-content-top">
                                         <h3 class="banner-title text-white">
                                             <a href="#">Chụp ảnh đẹp hơn <br> <span>Sử
-														dụng</span> Canon EOS <br> <span>Giảm 20%</span></a>
+														dụng</span> Canon EOS <br> <span>Giảm trước</span></a>
                                         </h3>
                                         <!-- End .banner-title -->
                                         <a th:href="@{/car/client}" class="banner-link">Cửa hàng
